make story button ready for usage

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -52,6 +52,7 @@ flutter:
   assets:
     - assets/like.png
     - assets/photo.png
+    - assets/avatar.JPG
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
